# Scrooge

./: .gitignore  .mcp.json  DOCS.md  ProfessorAI.md  README.md  examples  pyproject.toml  requirements.txt
backend/: cli.py  main.py  output_writer.py  parser.py
benchmarks/: BENCHMARK_REPORT.md  COCHANGE_REPORT.md  README.md  __init__.py  _aider_repomap_helper.py  bench_utils.py  benchmark_results_objective.json  brian2_architecture_output_live.json  cochange_benchmark.py  cochange_benchmark_results.json  debug_cochange.py  diagnose_failures.py  gemini_agent_benchmark.py  objective_benchmark.py  plot_results.py  real_repos.json  real_task_benchmark.py  real_task_results.json  report.py  run_benchmarks.py
benchmarks/results/: benchmark_report.md  benchmark_results.json  gemini_agent_results.json
cli/: repograph_cli.py  scrooge_cli.py
cochange/: __init__.py  cochange_analyzer.py
graph_builder/: call_graph.py  symbols_connections.py
indexer/: symbol_extractor.py
intelligence/: rank_graph_connections.py
mcp_server/: repograph_mcp.py  scrooge_mcp.py
output/: graph_output.json
parser/: ast_parser.py
scanner/: scanner.py
