[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrooge"
version = "0.1.0"
description = "Scrooge – MCP server that builds call-graphs and architecture maps for coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26",
    "networkx>=3.2",
    "typer>=0.12",
]

[project.scripts]
scrooge = "cli.scrooge_cli:app"
scrooge-mcp = "mcp_server.scrooge_mcp:main_sync"

[tool.setuptools.packages.find]
include = [
    "graph_builder*",
    "indexer*",
    "intelligence*",
    "mcp_server*",
    "output*",
    "parser*",
    "scanner*",
    "cli*",
]
exclude = [
    "example_repo*",
    ".venv*",
]
